@@ -439,9 +439,6 @@ class BaseReview(base.ATCTMixin, HistoryAwareMixin, atapi.BaseContent):
         )
         if review_author.strip() != ",":
             retval.append(safe_unicode(review_author).encode("utf-8"))
-        exhibitor = getattr(self, "getExhibitor", lambda: "")()
-        if exhibitor:
-            retval.append(exhibitor)
         return retval
 
     def getAllAuthorDataFulltext(self):
@@ -558,11 +555,13 @@ class BaseReview(base.ATCTMixin, HistoryAwareMixin, atapi.BaseContent):
     def punctuated_title_and_subtitle(self):
         """ #3129
         Note: all review types except for Presentation Online Resource
-        have the subtitle field"""
-        title = self.title
+        have the subtitle field.
+        titleProxy is used in Review Exhibition and can be empty, while title always has
+        a value."""
+        title = getattr(self, "titleProxy", self.title)
         subtitle = self.subtitle
         titles = [
-            (self.title, self.subtitle),
+            (title, subtitle),
         ]
         if "additionalTitles" in self.schema:
             titles = titles + [
