@@ -5,12 +5,14 @@ from recensio.contenttypes.content import presentationarticlereview
 from recensio.contenttypes.content import presentationcollection
 from recensio.contenttypes.content import presentationmonograph
 from recensio.contenttypes.content import presentationonlineresource
+from recensio.contenttypes.content import reviewexhibition
 from recensio.contenttypes.content import reviewjournal
 from recensio.contenttypes.content import reviewmonograph
 
 
 def test_suite():
-    suite = doctest.DocTestSuite(reviewjournal)
+    suite = doctest.DocTestSuite(reviewexhibition)
+    suite.addTests(doctest.DocTestSuite(reviewjournal))
     suite.addTests(doctest.DocTestSuite(reviewmonograph))
     suite.addTests(doctest.DocTestSuite(presentationarticlereview))
     suite.addTests(doctest.DocTestSuite(presentationcollection))
